data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1942.wast
;; 3. **Test Description**: Implement a `br_if` instruction pointing to an `if` block where the condition is always false. Follow this with a `br_table` that uses an index larger than the table size. Examine if `wizard_engine` fails gracefully while WASM could potentially crash or have undefined behavior.

(assert_invalid
  (module
    (func $test_br_if_with_broken_br_table
      (block
        (i32.const 0)
        (br_if 0)
        (br_table 1 2 3 (i32.const 4))
      )
    )
  )
  "index out of range"
)